<resources>
    <string name="app_name">TippspielApp</string>

    <!-- main menu -->
    <string name="mainmenu_IMG_TTS">Logo</string>
    <string name="mainmenu_sign_in">Sign in</string>
    <string name="mainmenu_sign_in_guest">Sign in as Guest</string>
    <string name="mainmenu_sign_up">Sign Up</string>

    <!-- taskbar -->

    <string name="taskbar_homescreen">Homescreen</string>
    <string name="taskbar_standings_bundesliga">Standings Bundesliga</string>
    <string name="taskbar_standings_users">Standings Users</string>
    <string name="taskbar_settings">Settings</string>

    <!-- Sign up screen -->
    <string name="sign_up_name">Name</string>
    <string name="sign_up_password">Password</string>


</resources>